2.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  # 없으면 default ns에 생성
  namespace: jk-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ordersystem
  template:
    metadata:
      labels:
        app: my-ordersystem
    spec:
      containers:
      - name: my-ordersystem
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/kim-jkyung-ns/ordersystem:latest #1.21.6 #1.22.1 latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
        # 컨테이너가 사용할수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "500Mi"
        # 컨테이너가 시작될때 보장받아야 하는 최소 자원
          requests:
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
# 클러스터내에서 service명은 url주소(엔드포인트)로 사용. ex)http://my-service:포트번호
  name: my-service
  namespace: jk-ns
spec:
  type: ClusterIP
  ports:
  # port는 서비스의 port. targetPort는 pod내 컨테이너의 port(내부포트).
  - port: 80
    targetPort: 8080
    # selector.app은 pod의 label과 일치되어야 매핑이 됨.
  selector:
    app: my-ordersystem #label명
