2.ordersystem/k8s/ingress.yml
# # ingress-controller 설치 명령어
# # kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# # aws lb -> ingress controller pod -> ingress -> service로의 라우팅

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-service
#   namespace: jk-ns
#   annotations:
#   # 여기서 "nginx"로 지정한 것은 이 Ingress가 NGINX 기반 ingress controller에 의해 처리된다는 의미
#     kubernetes.io/ingress.class: nginx
#     # nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거
    
# spec:
#   rules:
#   - host: server.realview45.shop  # 설정하려는 도메인 이름.
#     http:
#       paths:
#       # - path: /
#       - path: /bradkim1/ #bradkim1으로 시작하는 모든 url요청을 my-service로 라우팅한다는 정규표현식
#         pathType: Prefix
#         backend:
#           service:
#             name: my-service
#             port:
#               number: 80
#       # - path: /bradkim2/ #bradkim2으로 시작하는 모든 url요청을 my-service2로 라우팅한다는 정규표현식
#       #   pathType: Prefix
#       #   backend:
#       #     service:
#       #       name: my-service2
#       #       port:
#       #   


#       # ingress-controller 설치 명령어
# # kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# # aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: jk-ns
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - hosts:
    - "server.realview45.shop"
    secretName: server-realview45-shop-tls
  rules:
  - host: server.realview45.shop
    http:
      paths:
      - path: /
      # - path: /bradkim1/ # bradkim1으로 시작하는 모든 url요청을 my-service로 라우팅한다는 정규표현식
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
      # - path: /bradkim2/ #bradkim2으로 시작하는 모든 url요청을 my-service2로 라우팅한다는 정규표현식
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: my-service2
      #       port:
      #         number: 80
